Fixing bug with layers overlap

--- a/src/stylesheets/base/_helpers.scss
+++ b/src/stylesheets/base/_helpers.scss
@@ -9,7 +9,7 @@
 .darkmode {
   @include v-init((  
     bg-clr: rgb(21, 21, 21),
-    second-bg-clr: rgb(15, 21, 27),
+    second-bg-clr: rgb(20, 30, 40),
     brand-clr: rgb(187, 204, 224),
     second-brand-clr: rgb(84, 113, 124),
     strong-clr: #fff,
